# pyccista

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile_builder  Dockerfile_concord  Dockerfile_old  Dockerfile_twine  MANIFEST.in  Makefile  PKG-INFO  README.md  README.txt  cos_doubles.c  cos_doubles.py  dev_requirements.txt  example.c  example.i  get_eigen.sh  makefile  pyproject.toml  requirements.txt  requirements_tox.txt  setup.py  tox.ini
.github/workflows/: conda.yml  pip.yml  publish.yaml  wheels.yml
concord/: ccista.cpp  ccista.h  ccwrap.py
doc/: CMakeLists.txt  conf.py
include/pybind11_numpy_example/: pybind11_numpy_example.hpp
include/pyconcord/: pyconcord.hpp
lib/: CMakeLists.txt  pyconcord.cpp
notebooks/: Plotting.ipynb
notebooks/.ipynb_checkpoints/: Plotting-checkpoint.ipynb
scripts/: build_and_push.sh  build_dependencies.sh  build_wheels.sh  install_libraries.sh  setup_venv.sh  test.sh  upload_package.sh
src/: CMakeLists.txt  pybind11_numpy_example_python.cpp  pyconcord_python.cpp
src/concord/: __init__.py  ccista.i  ccista.py  ccista_wrap.cpp  ccwrap.py  datasets.py
src/pybind11_numpy_example/: __init__.py
src/pyconcord/: __init__.py
src/pyconcord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: disabled_test_robust_selection.py  test_basic.py  test_concord.py  test_datasets.py  test_robust_selection.py
tests/cpp/: CMakeLists.txt  pyconcord_t.cpp
tests/python/: test_pybind11_numpy_example.py  test_pyconcord.py
travis/: build_wheels.sh  install_libraries.sh  test.sh  upload_package.sh
