[project]
name = "pyconcord"
authors = [
  {email = "matzhaugen@gmail.com"},
  {name = "Matz Haugen"}
]
version = "0.3.2"
dynamic = ["description"]

dependencies = [
    "numpy==1.26.4",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
# Should be a copy of the build dependencies below.
dev = [
    "numpy>=1.25",
    "pybind11>=2.6,!=2.13.3",
]

[build-system]
requires = ["setuptools", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"
skip = ""
test-skip = ""
free-threaded-support = false

archs = ["auto"]
build-frontend = "default"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = 0

# before-all = "scripts/install_libraries.sh"
before-all = ""
before-build = ""
repair-wheel-command = ""

test-command = "pytest tests"
before-test = ""
test-requires = ["pytest"]
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"

musllinux-x86_64-image = "musllinux_1_2"
musllinux-i686-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-ppc64le-image = "musllinux_1_2"
musllinux-s390x-image = "musllinux_1_2"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]

[tool.cibuildwheel.pyodide]