[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyconcord"
version = "0.4.0"
description = "An example of using numpy with pybind11"
readme = "README.md"
license = {text = "MIT"}
authors=[{name="Liam Keegan", email="liam@keegan.ch"}]
maintainers=[{name="Liam Keegan", email="liam@keegan.ch"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pytest>=8.3.3",
    "scipy",
]
keywords = ["pybind11", "cibuildwheel", "c++", "pypi", "numpy", "simple", "example", "wheel", "pypi", "conda-forge"]
classifiers=[
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Github = "https://github.com/matzhaugen/pyconcord"
Documentation = "https://pyconcord.readthedocs.io"

[project.optional-dependencies]
test = ["pytest"]
docs = ["cmake", "breathe", "sphinx_rtd_theme"]

[tool.uv]
# This is the KEY LINE! otherwise the package will be cached and changes will not go through
# Ref: https://docs.astral.sh/uv/concepts/cache/#dynamic-metadata
reinstall-package = ["pyconcord"]

[tool.scikit-build.cmake.define]
BUILD_CPP = "ON"
BUILD_PYTHON = "ON"
BUILD_TESTING = "OFF"
BUILD_DOCS = "OFF"

[tool.cibuildwheel]
test-extras = "test"
test-command = "python -m pytest {project}/tests/python -v"
test-skip = "pp* *-musllinux* *-manylinux_i686"
