# find_package(Python COMPONENTS Interpreter Development)
find_package(pybind11 CONFIG REQUIRED)
find_package(Eigen3 CONFIG REQUIRED)
pybind11_add_module(_pyconcord pyconcord_python.cpp)
target_link_libraries(_pyconcord PUBLIC pyconcord)
target_link_libraries(pyconcord PUBLIC Eigen3::Eigen)
install(TARGETS _pyconcord DESTINATION pyconcord)
